# MatrixCalculator

./: BasicCalculator.cpp  BasicCalculator.h  CMakeLists.txt  GLUI_LinearAlgebra.cpp  GLUI_LinearAlgebra.h  LinearAlgebra.cpp  LinearAlgebra.h  MY_CRITERION.cpp  MY_CRITERION.h  ScienceCalculator.cpp  ScienceCalculator.h  controls_id.h  functions.cpp  functions.h  main.cpp  main_menu.cpp  main_menu.h
